--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <title>Blog Preview Card</title>
   </head>
   <body>
-    <h2 class="text-2xl text-blue-500">Home page</h2>
+    <main class="w-screen h-screen bg-primary flex items-center justify-center">
+      <section class="section-container">
+        <div class="mb-6">
+          <img
+            class="w-full h-52 rounded-lg overflow-hidden object-cover"
+            src="./assets/images/illustration-article.svg"
+            alt="articale-illustration"
+          />
+        </div>
+        <div class="flex flex-col space-y-4 text-darkGrey mb-6">
+          <div>
+            <button
+              class="bg-primary font-bold text-sm py-1 px-3 rounded-md inline"
+            >
+              Learning
+            </button>
+          </div>
+          <h5 class="text-sm tracking-widest">Published 21 Dec 2023</h5>
+          <h1 class="text-2xl font-bold">HTML & CSS foundations</h1>
+          <p class="text-lightGrey">
+            These languages are the backbone of every website, defining
+            structure, content, and presentation.
+          </p>
+        </div>
+        <div class="flex items-center gap-3">
+          <img
+            class="h-8 w-8 rounded-full"
+            src="./assets/images/image-avatar.webp"
+            alt="avatar"
+          />
+          <h2 class="font-bold">Greg Hooper</h2>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
