--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             </button>
           </div>
           <h5 class="text-sm tracking-widest">Published 21 Dec 2023</h5>
-          <h1 class="text-2xl font-bold">HTML & CSS foundations</h1>
+          <h1 class="text-2xl font-bold hover:text-primary">
+            HTML & CSS foundations
+          </h1>
           <p class="text-lightGrey">
             These languages are the backbone of every website, defining
             structure, content, and presentation.
