--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <section class="section-container">
         <div class="mb-6">
           <img
-            class="w-full h-52 rounded-lg overflow-hidden object-cover"
+            class="w-full h-52 rounded-xl overflow-hidden object-cover"
             src="./assets/images/illustration-article.svg"
             alt="articale-illustration"
           />
         </div>
-        <div class="flex flex-col space-y-4 text-darkGrey mb-6">
+        <div class="flex flex-col space-y-3 text-darkGrey mb-6">
           <div>
             <button
               class="bg-primary font-bold text-sm py-1 px-3 rounded-md inline"
